resizing for mobile/fixing blank space on iPhone

--- a/css/style.css
+++ b/css/style.css
@@ -217,15 +217,22 @@ a:hover {
 
   .stats {
     flex-wrap: wrap;
+    padding: 0;
+    max-width: 100%;
   }
 
   .stat {
     justify-content: space-between;
+    padding: 0;
   }
 
   .stat-title {
-    font-size: 2rem;
+    font-size: 3.5rem;
     margin-top: 1.5rem;
+  }
+
+  .stat-data {
+    font-size: 2.25rem;
   }
 
   .chart-section {
